kubernetes/k-result.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"labels":{"app":"machines-deployment"},"name":"machines-deployment","namespace":"default"},"spec":{"replicas":2,"selector":{"matchLabels":{"app":"machines"}},"template":{"metadata":{"labels":{"app":"machines"}},"spec":{"containers":[{"image":"habibahmedmagdy/machines:2.0.0","name":"machines-in-memory-cache","ports":[{"containerPort":8080}]}]}}}}
  creationTimestamp: "2022-02-14T14:31:50Z"
  generation: 1
  labels:
    app: machines-deployment
  name: machines-deployment
  namespace: default
  resourceVersion: "5608"
  uid: e3d55611-8303-4d26-857e-33c55274e73b
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: machines
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: machines
    spec:
      containers:
      - image: habibahmedmagdy/machines:2.0.0
        imagePullPolicy: IfNotPresent
        name: machines-in-memory-cache
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 2
  conditions:
  - lastTransitionTime: "2022-02-14T14:31:52Z"
    lastUpdateTime: "2022-02-14T14:31:52Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2022-02-14T14:31:50Z"
    lastUpdateTime: "2022-02-14T14:31:52Z"
    message: ReplicaSet "machines-deployment-86bfbbd4b8" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 1
  readyReplicas: 2
  replicas: 2
  updatedReplicas: 2
