kubernetes/machines-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: machines-deployment
  labels:
    app: machines-deployment
    type: application
spec:
  replicas: 2
  selector:
    matchLabels:
      app: machines-deployment
      type: application
  template:
    metadata:
      labels:
        app: machines-deployment
        type: application
    spec:
      containers:
        - name: machines-deployment
          image: habibahmedmagdy/machines:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: machines-service
spec:
  selector:
    app: machines-deployment
    type: application
#  type: NodePort  #    identifies an external service with IP address
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
#      nodePort: 30000  #      range from 30,000 to 32767
