kubernetes/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-machines
  labels:
    app: redis-machines
    type: cache
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-machines
      type: cache
  template:
    metadata:
      labels:
        app: redis-machines
        type: cache
    spec:
      containers:
        - name: redis-machines
          image: redis
          ports:
            - containerPort: 6379

---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
spec:
  selector:
    app: redis-machines
    type: cache
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379


# we currently have an issue in implementing the change in machines
